# mineru

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bumpversion.yml  checks.yml  ci.yml  pr-bump-preview.yml  publish.yml
src/mineru/: __init__.py  api.py  content.py  errors.py  job.py  models.py  results.py  types.py
src/uminer/: __init__.py  api.py  cli.py  errors.py  job.py  models.py  results.py  types.py
tests/: conftest.py  smoke_test.py  test_api.py  test_cli.py  test_live_api.py
