[project]
name = "uminer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Scott Hyndman", email = "scotty.hyndman@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.4.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
]

[project.scripts]
uminer = "uminer.cli:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]

[tool.basedpyright]
include = ["src", "tests"]
exclude = [".venv"]
pythonVersion = "3.13"
typeCheckingMode = "recommended"
reportMissingTypeStubs = false

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
