[project]
name = "uminer"
version = "0.2.0"
description = "Thin Python wrapper for MinerU's v4 extraction API"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Scott Hyndman", email = "scotty.hyndman@gmail.com" }
]
requires-python = ">=3.13"
keywords = ["mineru", "pdf", "ocr", "markdown"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.4.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "yaspin>=3.4.0",
]

[project.urls]
Homepage = "https://github.com/shyndman/uminer"
Repository = "https://github.com/shyndman/uminer"
Issues = "https://github.com/shyndman/uminer/issues"
Changelog = "https://github.com/shyndman/uminer/blob/main/CHANGELOG.md"

[project.scripts]
uminer = "uminer.cli:main"

[build-system]
requires = ["uv_build>=0.9.27,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "basedpyright>=1.34.0",
    "commitizen>=4.16.2",
    "prek>=0.4.1",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.13",
]

[tool.basedpyright]
include = ["src", "tests"]
exclude = [".venv"]
pythonVersion = "3.13"
typeCheckingMode = "recommended"
reportMissingTypeStubs = false

[tool.ruff]
target-version = "py313"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
version_scheme = "pep440"
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
major_version_zero = true
